# PiWRIS

./: .gitignore  404.html  README.md  environment.yml  index.html  pyproject.toml  search.html  sitemap.xml
commands/: index.html
dir/: index.html
docs/: bsoup_web_scraping.py  components.md  technology_review_by_library  technology_review_by_library.md  technology_review_by_metric.md  user_stories.md  web_scraping.py
edgedriver_linux64/: msedgedriver:Zone.Identifier
explanation/: index.html
home/: index.html
howto/: index.html
mkdocs/: mkdocs.yml
mkdocs/docs/: commands.md  dir.md  explanation.md  index.md  tutorials.md
mkdocs/site/: 404.html  index.html  search.html  sitemap.xml
mkdocs/site/commands/: index.html
mkdocs/site/dir/: index.html
mkdocs/site/explanation/: index.html
mkdocs/site/howto/: index.html
mkdocs/site/search/: search_index.json
search/: search_index.json
src/: bsoup_web_scraping.py  pywris.py
src/pywris/: __init__.py  pywris.py  pywris_main.py
src/pywris/country_data/: state_codes.py
src/pywris/geo_units/: components.py
src/pywris/static_data/: request_urls.py  state_ids.py
src/pywris/surface_water/storage/: reservoir.py
src/pywris/utils/: fetch_wris.py
src/pywris/visualization/: plot.py
src/surface_water/storage/reservoir/: reservoir.py
test/: test_pywris.py
test/visualization/: test_plots.py
tests/: test_pywris.py
tests/geo_units/: test_components.py
tests/surface_water/storage/: test_reservoir.py
tests/visualization/: test_plots.py
tutorials/: index.html
